website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/styling-layout.mdx
---
description: A Docusaurus site is a pre-rendered single-page React application. You can style it the way you style React apps.
---

import ColorGenerator from '@site/src/components/ColorGenerator';
import IframeWindow from '@site/src/components/BrowserWindow/IframeWindow';

# Styling and Layout

:::tip

This section is focused on styling through stylesheets. For more advanced customizations (DOM structure, React code...), refer to the [swizzling guide](./swizzling.mdx).

:::

A Docusaurus site is a single-page React application. You can style it the way you style React apps.

There are a few approaches/frameworks which will work, depending on your preferences and the type of website you are trying to build. Websites that are highly interactive and behave more like web apps will benefit from more modern styling approaches that co-locate styles with the components. Component styling can also be particularly useful when you wish to customize or swizzle a component.

## Global styles {#global-styles}

This is the most traditional way of styling that most developers (including non-front-end developers) would be familiar with. It works fine for small websites that do not have much customization.

If you're using `@docusaurus/preset-classic`, you can create your own CSS files (e.g. `/src/css/custom.css`) and import them globally by passing them as an option of the classic theme.

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        // highlight-start
        theme: {
          customCss: ['./src/css/custom.css'],
        },
        // highlight-end
      },
    ],
  ],
};
```

Any CSS you write within that file will be available globally and can be referenced directly using string literals.

```css title="/src/css/custom.css"
.purple-text {
  color: rebeccapurple;
}
```

```jsx
function MyComponent() {
  return (
    <main>
      <h1 className="purple-text">Purple Heading!</h1>
    </main>
  );
}
```

If you want to add CSS to any element, you can open the DevTools in your browser to inspect its class names. Class names come in several kinds:

- **Theme class names**. These class names are listed exhaustively in [the next subsection](#theme-class-names). They don't have any default properties. You should always prioritize targeting those stable class names in your custom CSS.
- **Infima class names**. These class names are found in the classic theme and usually follow the [BEM convention](http://getbem.com/naming/) of `block__element--modifier`. They are usually stable but are still considered implementation details, so you should generally avoid targeting them. However, you can [modify Infima CSS variables](#styling-your-site-with-infima).
- **CSS module class names**. These class names have a hash in production (`codeBlockContainer_RIuc`) and are appended with a long file path in development. They are considered implementation details and you should almost always avoid targeting them in your custom CSS. If you must, you can use an [attribute selector](https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors) (`[class*='codeBlockContainer']`) that ignores the hash.

### Theme Class Names {#theme-class-names}

We provide some stable CSS class names for robust and maintainable global layout styling. These names are theme-agnostic and meant to be targeted by custom CSS.

:::tip

If you can't find a way to create a robust CSS selector, please [report your customization use-case](https://github.com/facebook/docusaurus/discussions/5468) and we will consider adding new class names.

:::

<details>

<summary>Exhaustive list of stable class names</summary>

```mdx-code-block
import ThemeClassNamesCode from '!!raw-loader!@site/../packages/docusaurus-theme-common/src/utils/ThemeClassNames.ts';
import CodeBlock from '@theme/CodeBlock';

<CodeBlock className="language-ts">
  {ThemeClassNamesCode
    // remove source comments
    .replace(/\/\*[\s\S]*?\*\/|\/\/.*/g,'')
    .replace(/^ *\n/gm,'')
    .trim()}
</CodeBlock>
```

</details>

### Styling your site with Infima {#styling-your-site-with-infima}

`@docusaurus/preset-classic` uses [Infima](https://infima.dev/) as the underlying styling framework. Infima provides a flexible layout and common UI components styling suitable for content-centric websites (blogs, documentation, landing pages). For more details, check out the [Infima website](https://infima.dev/).

When you scaffold your Docusaurus project with `create-docusaurus`, the website will be generated with basic Infima stylesheets and default styling. You can override Infima CSS variables globally.

```css title="/src/css/custom.css"
:root {
  --ifm-color-primary: #25c2a0;
  --ifm-code-font-size: 95%;
}
```

Infima uses 7 shades of each color. We recommend using [ColorBox](https://www.colorbox.io/) to find the different shades of colors for your chosen primary color.

或者，您可以使用以下工具為網站生成不同色調的變數，並將其複製到 `/src/css/custom.css` 中。

<ColorGenerator />

### 深色模式 {#dark-mode}

在淺色模式下，`<html>` 元素會帶有 `data-theme="light"` 屬性；在深色模式下則為 `data-theme="dark"`。因此，您可以透過針對特定屬性的 `html` 元素來限定 CSS 僅在深色模式下生效。

```css
/* Overriding root Infima variables */
[data-theme='dark'] {
  --ifm-color-primary: #4e89e8;
}
/* Styling one class specially in dark mode */
[data-theme='dark'] .purple-text {
  color: plum;
}
```

:::tip

您可以直接透過 `docusaurus-theme` 查詢字串參數來初始化 Docusaurus 主題。

範例：

<IframeWindow url="/docs/?docusaurus-theme=dark" />

<IframeWindow url="/docs/configuration?docusaurus-theme=light" />

:::

### 資料屬性 {#data-attributes}

您可以透過遵循 `docusaurus-data-<key>` 模式的查詢字串參數來注入 `<html>` 資料屬性。這讓您能根據查詢字串靈活地為頁面套用不同樣式。

例如，讓我們為其中一個頁面套用紅色邊框並隱藏導覽列：

```css title="/src/css/custom.css"
html[data-navbar='false'] .navbar {
  display: none;
}

html[data-red-border] div#__docusaurus {
  border: red solid thick;
}
```

<IframeWindow url="/docs/?docusaurus-data-navbar=false&docusaurus-data-red-border" />

:::tip[Iframe 模式]

如果您計劃透過 iframe 在其他網站嵌入 Docusaurus 頁面，建立替代顯示模式並使用如 `https://mysite.com/docs/myDoc?docusaurus-data-mode=iframe` 的 iframe 網址會很有幫助。您需自行提供額外樣式並決定保留或隱藏哪些 UI 元素。

:::

### 行動裝置視圖 {#mobile-view}

Docusaurus 使用 `996px` 作為行動裝置螢幕寬度與桌機的分界點。若您希望在行動視圖中使用不同佈局，可使用媒體查詢。

```css
.banner {
  padding: 4rem;
}
/** In mobile view, reduce the padding */
@media screen and (max-width: 996px) {
  .heroBanner {
    padding: 2rem;
  }
}
```

## CSS 模組 {#css-modules}

若要使用 [CSS 模組](https://github.com/css-modules/css-modules) 為元件添加樣式，請將樣式表檔案命名為 `.module.css` 後綴（例如 `welcome.module.css`）。Webpack 會將此類 CSS 檔案視為 CSS 模組載入，您需透過導入的 CSS 模組屬性來引用類別名稱（而非使用純字串）。此慣例與 [Create React App](https://facebook.github.io/create-react-app/docs/adding-a-css-modules-stylesheet) 所用方式相似。

```css title="styles.module.css"
.main {
  padding: 12px;
}

.heading {
  font-weight: bold;
}

.contents {
  color: #ccc;
}
```

```jsx
import styles from './styles.module.css';

function MyComponent() {
  return (
    <main className={styles.main}>
      <h1 className={styles.heading}>Hello!</h1>
      <article className={styles.contents}>Lorem Ipsum</article>
    </main>
  );
}
```

建置時，Webpack 會將類別名稱處理為全域唯一的類別名稱。

## CSS-in-JS {#css-in-js}

:::warning

CSS-in-JS 支援目前仍在開發中，因此像 MUI 這樣的函式庫可能會出現顯示異常。[歡迎提交 PR](https://github.com/facebook/docusaurus/issues/1640)。

:::

## Sass/SCSS {#sassscss}

若要使用 Sass/SCSS 作為 CSS 預處理器，請安裝非官方的 Docusaurus 外掛 [`docusaurus-plugin-sass`](https://github.com/rlamana/docusaurus-plugin-sass)。此外掛同時適用於全域樣式與 CSS 模組方法：

1. 安裝 [`docusaurus-plugin-sass`](https://github.com/rlamana/docusaurus-plugin-sass)：

```bash npm2yarn
npm install --save docusaurus-plugin-sass sass
```

2. 在 `docusaurus.config.js` 檔案中包含此外掛：

```js title="docusaurus.config.js"
export default {
  // ...
  // highlight-next-line
  plugins: ['docusaurus-plugin-sass'],
  // ...
};
```

3. 照常撰寫並導入您的 Sass/SCSS 樣式表。

### 使用 Sass/SCSS 的全域樣式 {#global-styles-using-sassscss}

現在您可以將 `@docusaurus/preset-classic` 的 `customCss` 屬性指向您的 Sass/SCSS 檔案：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        // ...
        theme: {
          // highlight-next-line
          customCss: ['./src/css/custom.scss'],
        },
        // ...
      },
    ],
  ],
};
```

### 使用 Sass/SCSS 的模組 {#modules-using-sassscss}

將樣式表檔案命名為 `.module.scss` 後綴（例如 `welcome.module.scss`）而非 `.css`。Webpack 會使用 `sass-loader` 預處理您的樣式表，並將其作為 CSS 模組載入。

```scss title="styles.module.scss"
.main {
  padding: 12px;

  article {
    color: #ccc;
  }
}
```

```jsx
import styles from './styles.module.scss';

function MyComponent() {
  return (
    <main className={styles.main}>
      <article>Lorem Ipsum</article>
    </main>
  );
}
```